--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo/vector-icons": "^12.0.5",
     "@hookform/resolvers": "^2.8.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "expo": "~42.0.1",
